2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2022-08-22 Luigi Scarso <luigi.scarso@gmail.com>

        * Move potrace under source/libs

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-01-18 Luigi Scarso <luigi.scarso@gmail.com>

	* am/mfluajitlpeg.am: lpeg for mfluajit

2017-04-16 Luigi Scarso <luigi.scarso@gmail.com>

	* am/mfluajit.am: delete useless lua files


2016-04-05  Karl Berry  <karl@tug.org>

	* am/mflua.am: no need for inimfluajit.

2015-09-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mfluajit.am: Fix dependencies.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mfluajittraptest (removed): Renamed ...
	* mfluajittraptest.test (new):  ... into this.
	* am/mfluajit.am: Better dependencies for 'make check'.

2015-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mfluajit.am: Fix dependencies.

2015-07-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mfluajit.am, mfluac.[ch]: Use lkpselib.c.

2015-07-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mfluajit.am: Always create mfluajit-nowin, either as extra
	program or as symlink.

2015-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mfluajittraptest: Use ../mfluadir/mfluatrap/*.lua files.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mfluajit.am: Use $(tie_c) and $(tie_m).

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Imported MFLuaJIT into TeX Live, based on the SVN repository
	  https://foundry.supelec.fr/projects/mflua
	  from Luigi Scarso <luigi.scarso@gmail.com>.